# py-mathutils

./: CMakeLists.txt  MANIFEST.in  README.md  readme.rst  setup.py  update_from_blender.py
src/stubs/: BLI_memarena.h  stubs.c
